# libcext

./: .gitignore  CMakeLists.txt
include/cpoly/: option.h  result.h  type.h
include/modc/: option.h  result.h  type.h  typeof.h
src/: option.c  result.c
test/: main.c  option.c  result.c
test/include/cpoly/test/: option.h  result.h
test/include/modc/test/: option.h  result.h
